--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,14 +15,7 @@
     <!--  </Navigation>   --> 
     <app-search-box ></app-search-box>
     <!--  <UserProfile>  -->
-    <div class="UserProfile">
-      <div class="User">
-        <div class="name">Jack Oliver</div>
-        <div class="image">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQi7RR3wRvXnjcFr8PuNyvMfd27syUdeZqGHLL7pZIj-VgSa4eywg&s" alt="profile" />
-        </div>
-      </div>
-    </div>
+      <app-user-profile></app-user-profile>
     <!--*  </UserProfile>   -->
   </header>
   <app-hero></app-hero>
